# GeometryLib

./: .gitignore  CMakeLists.txt  GeometryLib.sln  README.md
DrawEngine/: Camera.cpp  Camera.h  CubePH.h  DrawEngine.cpp  DrawEngine.h  DrawEngine.vcxproj  DrawEngine.vcxproj.filters  OGLinit.cpp  OGLinit.h  PhysicsObject.h  RayCast.cpp  RayCast.h  ReadMe.txt  stdafx.cpp  stdafx.h
Engine/: BoxPH.cpp  BoxPH.h  CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Color.cpp  Color.h  CubePH.cpp  CubePH.h  DrawEngine.cpp  DrawEngine.h  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  OGLinit.cpp  OGLinit.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsObjects.h  PhysicsProcessor.cpp  PhysicsProcessor.h  Player.cpp  Player.h  ReadMe.txt  SquareAAPH.cpp  SquareAAPH.h  Stdafx.cpp  TextObject.cpp  TextObject.h  World.cpp  World.h  WorldChunk.cpp  WorldChunk.h
Essential/: Essential.cpp  Essential.h  Essential.vcxproj  Essential.vcxproj.filters  ReadMe.txt  stdafx.cpp
GeometryLib/: Box.cpp  Box.h  CMakeLists.txt  Cube.cpp  Cube.h  EmptyPS.cpp  EmptyPS.h  Essential.cpp  Essential.h  GeometryLib.cpp  GeometryLib.h  GeometryLib.vcxproj  GeometryLib.vcxproj.filters  Intersection.cpp  Intersection.h  Line.cpp  Line.h  Plane.cpp  Plane.h  PointSet.cpp  PointSet.h  Primitives.h  Ray.cpp  Ray.h  RayCast.cpp  RayCast.h  ReadMe.txt  RectangleAA.cpp  RectangleAA.h  Segment.cpp  Segment.h  SquareAA.cpp  SquareAA.h  Surface.cpp  Surface.h  Surfaces.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  (+5 more)
Starter/: CMakeLists.txt  Starter.cpp
ghjk/: ReadMe.txt  ghjk.cpp  ghjk.vcxproj  ghjk.vcxproj.filters  stdafx.cpp
ipch/geometrylib-ea531b52/: geometrylib-f7583c8f.ipch
